# practice

./: README.md  app.py  pyproject.toml
static/: pow.csv
templates/: result.html  upload.html
